--- a/index.html/css.css
+++ b/index.html/css.css
@@ -1,3 +1,34 @@
+.resolucion{
+    width: 99%;
+    text-align: center;
+}
+
+@media (max-width: 767px){
+    .desktop{
+        display: none;
+    }
+    .tablet{
+        display: none;
+    }
+}
+
+@media (max-width: 768px)and (max-width: 900px){
+    .desktop{
+        display: none;
+    }
+    .movil{
+        display: none;
+    }
+}
+
+@media (max-width: 991px){
+    .tablet{
+        display: none;
+    }
+    .movil{
+        display: none;
+    }
+}
 *{
     padding: 0;
     margin: 0;
